<resources>
    <string name="app_name">Financial Controller</string>
    <string name="login_title">Seen.</string>
    <string name="login_subtitle">Proceed to login, get summaries &amp; spend smarter.</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="create_account">Create account</string>
    <string name="cd_logo">App logo</string>
    <string name="cd_category_icon">Category icon</string>

    <string name="title_add_transaction">Add Transaction</string>
    <string name="label_income">Income</string>
    <string name="label_expense">Expense</string>
    <string name="label_amount">Amount</string>
    <string name="label_category">Category</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_note">Note</string>
    <string name="label_recurring">Recurring Transaction</string>
    <string name="btn_save">Save Transaction</string>

    <!-- Added Categories Array -->
    <string-array name="categories_array">
        <item>Groceries</item>
        <item>Rent</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Shopping</item>
        <item>Salary</item>
        <item>Other</item>
    </string-array>
</resources>